# dataleague_datathon

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  pyproject.toml
data/processed/: author_features.parquet  dup_lookup.parquet  kw_lookup.parquet  post_features.parquet
models/task_1/: hdbscan.pkl  hdbscan_scaler.pkl  isolation_forest.pkl  minmax_scaler.pkl  scaler.pkl
models/task_3/: inf_clip_bounds.npy  inf_isolation_forest.pkl  inf_minmax_scaler.pkl  inf_scaler.pkl
notebooks/: 01_eda.ipynb  02_features.ipynb  03_if_scorer.ipynb  03_modeling.ipynb  04_manipulation_map.ipynb  05_inference.ipynb
outputs/: author_scores.csv  cluster_summary.csv  post_clusters.parquet  post_scores.parquet  top_bots.csv
src/: data_loader.py  ensemble.py  features.py  hdbscan_cluster.py  inference.py  model.py
