[project]
name = "dataleague-datathon"
version = "0.1.0"
description = "Sosyal Medya Manipülasyon Tespit Sistemi - Unsupervised Anomaly Detection"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.10.0",
    "hdbscan>=0.8.30",
    "plotly>=5.14.0",
    "dash>=2.14.0",
    "jupyter>=1.0.0",
    "pyarrow>=12.0.0",
    "statsmodels>=0.14.6",
]
